update to include release plugin

--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,22 @@
             <url>http://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
+   <scm>
+	<connection>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</connection>
+	<url>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</url>
+	<developerConnection>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</developerConnection>
+  </scm>
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                 <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
