--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>test</groupId>
     <artifactId>simple-maven-project-with-tests</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
     <packaging>jar</packaging>
     <licenses>
         <license>
@@ -15,6 +15,7 @@
 	<connection>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</connection>
 	<url>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</url>
 	<developerConnection>scm:git:git@github.com:jokoder/simple-maven-project-with-tests.git</developerConnection>
+    <tag>simple-maven-project-with-tests-2.0</tag>
   </scm>
     <build>
         <plugins>
